<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/text_img_1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:text="@string/image_1" />

    <LinearLayout
        android:id="@+id/layout_img_1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/text_img_1"
        android:layout_alignParentStart="true"
        android:orientation="horizontal">

        <Button
            android:id="@+id/button_load_image_1"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:text="@string/load" />

        <Button
            android:id="@+id/button_load_image_1_5x"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:text="@string/load_5x" />

        <Button
            android:id="@+id/button_load_image_1_10x"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:text="@string/load_10x" />

        <Button
            android:id="@+id/button_mutate"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:text="@string/mutate" />

        <Button
            android:id="@+id/button_copy"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:text="@string/copy" />
    </LinearLayout>

    <TextView
        android:id="@+id/text_img_2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/layout_img_1"
        android:layout_alignParentStart="true"
        android:text="@string/not_apng" />

    <LinearLayout
        android:id="@+id/layout_img_2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/text_img_2"
        android:layout_alignParentStart="true"
        android:orientation="horizontal">

        <Button
            android:id="@+id/button_load_image_2_normal_png"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/normal_png" />

        <Button
            android:id="@+id/button_load_image_2_jpeg"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/jpeg" />

    </LinearLayout>

    <TextView
        android:id="@+id/text_commands"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/layout_img_2"
        android:layout_alignParentStart="true"
        android:text="@string/commands" />

    <LinearLayout
        android:id="@+id/layout_commands"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/text_commands"
        android:layout_alignParentStart="true"
        android:orientation="horizontal">

        <Button
            android:id="@+id/button_start"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/start" />

        <Button
            android:id="@+id/button_stop"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/stop" />

        <Button
            android:id="@+id/button_seek_start"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/seek_to_first" />

        <Button
            android:id="@+id/button_seek_end"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/seek_to_end" />

        <Button
            android:id="@+id/button_gc"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/run_gc" />
    </LinearLayout>

    <TextView
        android:id="@+id/text_status"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/layout_commands"
        android:layout_alignParentStart="true" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/text_status"
        android:layout_alignParentStart="true" />

</RelativeLayout>
